<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardViewRide"
    android:layout_width="match_parent"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true"
    android:clickable="true"
    android:layout_height="210dp">
    <FrameLayout
        android:id="@+id/frameLayoutCard"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:background="@color/icons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <ImageView
                android:id="@+id/dateIc"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_date" />
            <TextView
                android:id="@+id/dateCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryText"
                android:textSize="18sp"
                android:layout_toEndOf="@+id/dateIc"
                android:text="@string/date"/>

            <ImageView
                android:id="@+id/timeIc"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_time"
                android:layout_toStartOf="@+id/rideHour"/>
            <TextView
                android:id="@+id/rideHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryText"
                android:textSize="18sp"
                android:text="@string/hour"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="45dp"
            android:weightSum="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/typeRideImage"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16dp"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.3"
                android:layout_marginStart="16dp">
                <TextView
                    android:id="@+id/userCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp"
                    android:text="@string/hint_txtUser"
                    />
                <TextView
                    android:id="@+id/txtOrigin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryText"
                    android:text="@string/originText" />
                <TextView
                    android:id="@+id/txtDestination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryText"
                    android:text="@string/destinationText"/>
            </LinearLayout>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">
            <TextView
                android:id="@+id/typeCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rideType"
                android:textColor="@color/primaryText"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/passengerCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passengers"
                android:textColor="@color/primaryText"
                android:textSize="18sp"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">
            <Button
                android:enabled="true"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/btnGoCard"
                android:layout_alignParentEnd="true"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:theme="@style/RaisedButtonDark"
                android:text="@string/goText"
                android:visibility="visible" />
            <Button
                android:enabled="true"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/btnCancelCard"
                android:layout_alignParentEnd="true"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:theme="@style/RaisedButtonCancel"
                android:text="@string/cancel"
                android:visibility="gone"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/divider" />
    </FrameLayout>
</android.support.v7.widget.CardView>