<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--Titulo-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Términos y Condiciones de Uso."
                android:textStyle="bold"
                android:textColor="@color/primaryText"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">
            <!--Informacion relevante-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Información relevante."
                    android:textStyle="bold"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/informacion_relevante_p1"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/informacion_relevante_p2"
                    android:layout_gravity="end"/>
            </LinearLayout>
            <!--Licencia-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Licencia."
                    android:textStyle="bold"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/licencia_p1"
                    android:layout_gravity="end"/>
            </LinearLayout>
            <!--Propiedad-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Propiedad."
                    android:textStyle="bold"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/propiedad_p1"
                    android:layout_gravity="end"/>
            </LinearLayout>
            <!--PRIVACIDAD-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Privacidad."
                    android:textStyle="bold"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacidad_p1"
                    android:layout_gravity="end"/>
            </LinearLayout>
            <!--Información que es recogida-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Información que es recogida."
                    android:textStyle="bold"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/informacion_recogida_p1"
                    android:layout_gravity="end"/>

            </LinearLayout>
            <!--Uso del Información recogida-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Uso de la información recogida"
                    android:textStyle="bold"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uso_informacion_recogida_p1"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uso_informacion_recogida_p2"
                    android:layout_gravity="end"/>
            </LinearLayout>
            <!--Enlaces a Terceros-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Enlaces a terceros"
                    android:textStyle="bold"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enlaces_terceros_p1"
                    android:layout_gravity="end"/>
            </LinearLayout>
            <!--Control de su información personal-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Control de su información personal"
                    android:textStyle="bold"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/control_informacion_personal"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_terminos"
                    android:layout_gravity="end"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
</android.support.design.widget.CoordinatorLayout>