<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context="com.ridelineTeam.application.rideline.view.fragment.CreateCommunityFragment">
    <LinearLayout
        android:background="@color/icons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtCommunityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_txtName"
                android:inputType="text"
                android:maxLength="25"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtCommunityDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_txtDescription"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:maxLength="120"/>

        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/white_space"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/communityType"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <co.ceryle.radiorealbutton.RadioRealButtonGroup
                android:id="@+id/radioGroupType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:rrbg_animateTexts_enter="overshoot"
                app:rrbg_dividerColor="@color/divider"
                app:rrbg_dividerSize="1dp"
                app:rrbg_radius="10dp"
                app:rrbg_selectorColor="@color/colorAccent"
                app:rrbg_selectorSize="6dp">

                <co.ceryle.radiorealbutton.RadioRealButton
                    android:id="@+id/radioTypePrivate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioPrivate"
                    app:rrb_checked="true"
                    app:rrb_drawableHeight="36dp"
                    app:rrb_drawablePadding="8dp"
                    app:rrb_drawableWidth="36dp"
                    app:rrb_ripple="true"
                    app:rrb_drawable="@drawable/ic_lock_private"
                    app:rrb_rippleColor="@color/colorAccent"
                    app:rrb_text="@string/radioPrivate"
                    app:rrb_textColor="@color/secondaryText" />

                <co.ceryle.radiorealbutton.RadioRealButton
                    android:id="@+id/radioTypePublic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioPublic"
                    app:rrb_drawable="@drawable/ic_lock_public"
                    app:rrb_drawableHeight="36dp"
                    app:rrb_drawablePadding="8dp"
                    app:rrb_drawableWidth="36dp"
                    app:rrb_ripple="true"
                    app:rrb_rippleColor="@color/colorAccent"
                    app:rrb_text="@string/radioPublic"
                    app:rrb_textColor="@color/secondaryText" />
            </co.ceryle.radiorealbutton.RadioRealButtonGroup>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_createCommunity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_createCommunity"
            android:padding="12dp"
            android:theme="@style/RaisedButtonDark"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
